Fix layout issues on all devices for main page

--- a/src/app/(website)/Hero.module.css
+++ b/src/app/(website)/Hero.module.css
@@ -3,10 +3,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 60px 0;
+  margin-top: 60px;
   position: relative;
   overflow: hidden;
-  padding: 0 20px;
+  padding: 0 40px;
 }
 
 .subtitle {
