--- a/src/app/(website)/Personas.module.css
+++ b/src/app/(website)/Personas.module.css
@@ -4,7 +4,7 @@
   justify-content: center;
   background: var(--base75);
   overflow: hidden;
-  padding-bottom: 60px;
+  padding: 0px 20px 60px 20px;
   border-radius: 20px;
 }
 
@@ -39,7 +39,7 @@
   height: auto;
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1200px) {
   .items {
     grid-template-columns: 1fr;
   }
