--- a/src/components/common/NewsletterSignup.module.css
+++ b/src/components/common/NewsletterSignup.module.css
@@ -3,6 +3,7 @@
   grid-template-columns: 1fr 500px;
   align-items: center;
   gap: 30px;
+  padding: 0 20px;
 }
 
 .input {
